# Scott_NetEng_project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
automation/lib/: logging_setup.py
cisco_8000v_basics/: __init__.py
cisco_8000v_basics/automation/lib/: logging_setup.py  nested.py
cisco_8000v_basics/infra/terraform/: README.md  variables.tf
cisco_8000v_basics/net/nornir/: run_httpx.py  run_httpx_bk.py  run_rest.py  run_ssh.py
cisco_8000v_basics/net/nornir/inventory/: defaults.yaml  groups.yaml
cisco_8000v_basics/net/nornir/tasks/: show_httpx.py  show_httpx_bk.py  show_rest.py  show_ssh.py
cisco_8000v_basics/observability/scripts/: metrics_probe.py
cisco_8000v_basics/tests/: conftest.py  pytest_sanity.py
infra/terraform/: provider.tf
net/nornir/: config.yaml  run.py  run_httpx.py  run_rest.py  run_ssh.py
net/nornir/inventory/: defaults.yaml  groups.yaml  hosts.yaml
net/nornir/tasks/: show.py  show_httpx.py  show_rest.py
nso_orchestration/: __init__.py
nso_orchestration/automation/: intent_engine.py  intent_models.py  nso_client.py  service_models.py  template_renderer.py
nso_orchestration/examples/: apply_intent.py  run_any_command.py  sync_devices.py
nso_orchestration/intent/: network_intent.yaml
nso_orchestration/services/: bgp_peering.py
nso_orchestration/tests/: conftest.py  test_intent_models.py  test_nso_loopback.py
validation/tests/: test_sanity.py
week1-cisco-8000v-basics/automation/lib/: logging_setup.py  nested.py
week1-cisco-8000v-basics/infra/terraform/: main.tf
week1-cisco-8000v-basics/net/nornir/: config.yaml  run_httpx.py  run_httpx_bk.py  run_rest.py  run_ssh.py
week1-cisco-8000v-basics/net/nornir/inventory/: hosts.yaml
week1-cisco-8000v-basics/net/nornir/tasks/: show_httpx.py  show_httpx_bk.py
week1-cisco-8000v-basics/observability/scripts/: metrics_probe.py
week1-cisco-8000v-basics/tests/: conftest.py  pytest_sanity.py
week1-nso-orchestration/automation/: nso_client.py
week1-nso-orchestration/tests/: conftest.py  test_nso_loopback.py
